# my_blog_auth

./: .gitignore  README.md  auth.env  pyproject.toml
auth/: main.py
auth/base/: type_hint.py
auth/core/: app.py  components.py  components.pyi  exception_handler.py  exceptions.py  middelware.py  routes.py  settings.py  utils.py
auth/migrations/: env.py
auth/store/: store.py  store.pyi
auth/store/cache/: accessor.py
auth/store/database/: postgres.py  redis.py
auth/store/ems/: ems.py
auth/store/user/: accessor.py  models.py
auth/store/user_manager/: manager.py
auth/user/: schemes.py  utils.py  views.py
docker/: dockerfile
docs/: comand.md
tests/: conftest.py
tests/app/core/: app.py
tests/app/store/: store.py
tests/app/store/database/: postgres.py  redis.py
tests/app/store/ems/: ems.py
tests/auth_service/: test_users.py
tests/auth_service/fixtures/: data.py
tests/migrations/: env.py
tests/migrations/versions/: 2023_08_27_19_51-first_migration.py
